# pipecat

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  README.md  build.rs
.claude/: review_findings_r1.md  review_findings_r2.md  review_findings_r3.md  review_findings_r4.md
.github/workflows/: ci.yml  rust.yml
benches/: processor_latency.rs
docs/plans/: 2026-02-26-rust-architecture-overhaul-design.md
examples/: test_cartesia_tts.rs  twilio_outbound.rs
pipecat-rs/: Cargo.toml  README.md
pipecat-rs/src/: lib.rs  prelude.rs
pipecat-rs/tests/: test_filters.rs  test_frame_processor.rs  test_pipeline.rs
proto/: frames.proto
src/: lib.rs  prelude.rs
src/audio/: codec.rs  mel.rs  mod.rs  models.rs  resampler.rs  smart_turn.rs  utils.rs
src/frames/: frame_enum.rs  mod.rs
src/metrics/: mod.rs
src/observers/: base_observer.rs  mod.rs
src/pipeline/: channel.rs  mod.rs
src/processors/: mod.rs  processor.rs
src/serializers/: exotel.rs  genesys.rs  json.rs  mod.rs  plivo.rs  protobuf.rs  telnyx.rs  twilio.rs  vonage.rs
src/services/: anthropic.rs  assemblyai.rs  aws_polly.rs  azure.rs  cartesia.rs  cerebras.rs  deepgram.rs  deepseek.rs  elevenlabs.rs  fireworks.rs  gladia.rs  google.rs  google_stt.rs  google_tts.rs  grok.rs  groq.rs  hume.rs  kokoro.rs  lmnt.rs  mistral.rs  mod.rs  neuphonic.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  piper.rs  qwen.rs  rime.rs  sambanova.rs  together.rs  (+1 more)
tests/: test_filters.rs  test_frame_processor.rs  test_pipeline.rs  test_rubato_stability.rs  test_silero_vad.rs  test_smart_turn.rs
(+66 files in other folders)
