[package]
name = "pipecat"
version = "0.1.0"
edition = "2021"
description = "Pipecat - Real-time voice and multimodal conversational AI framework (Rust port)"
license = "BSD-2-Clause"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
downcast-rs = "2"
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
bytes = "1"
prost = "0.13"
urlencoding = "2"
rubato = "0.16"
tokio-util = "0.7"
ort = { version = "2.0.0-rc.11", optional = true }
ndarray = { version = "0.17", optional = true }
rustfft = { version = "6", optional = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
axum = { version = "0.8", features = ["ws"] }

[features]
silero-vad = ["ort", "ndarray"]
smart-turn = ["ort", "ndarray", "rustfft", "silero-vad"]

[[bench]]
name = "processor_latency"
harness = false

[[example]]
name = "twilio_outbound"
path = "examples/twilio_outbound.rs"
